--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "firebase": "^8.7.1",
+    "moment": "^2.29.1",
     "toasty": "^6.0.3"
   },
   "devDependencies": {
